--- a/QuickStart/index.html
+++ b/QuickStart/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,6 +9,25 @@
   <body>
     <h1>Hello, world!</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <!--Este div se comporta como una fila-->
+    <div class="row"> 
+    </div>
+    <!--En la estructura del grid un contenedor puede tener varias filas, pero cada una de las 
+    filas tien 12 columnas-->
+    <div class="container">
+      <div class="row">
+        <div class="col"></div>
+        <div class="col"></div>
+      </div>
+      <div class="row">
+        <div class="col"></div>
+        <div class="col"></div>
+        <div class="col"></div>
+      </div>
+    </div>
+    <!--Contenedores-->
+    <div class="container">
 
+    </div>
   </body>
 </html>
