--- a/QuickStart/container.html
+++ b/QuickStart/container.html
@@ -23,5 +23,8 @@
     <div class="container-fluid">
       .container-fluid
     </div>
+    <div class="container-lg">
+      .container-lg
+    </div>
   </body>
 </html>
