--- a/PortafolioWeb/index.html
+++ b/PortafolioWeb/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
+        <!--Metadatos-->
+        <meta charset="utf-8">
+        <meta name="author" content="Alceaxich">
+        <meta name="description" content="Portafolio de Desarrollo Web de Alceaxich">
+        <meta name="keywords" content="HTML, CSS, JAVASCRIPT, REACT">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!--Titulo-->
         <title>Portafolio  Web</title>
+        <!--Favicon-->
+        <link rel="icon" type="image/x-icon" href="images/icono.png">
         <!--Bootstrap-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
         <!--CSS-->
