--- a/PortafolioWeb/index.html
+++ b/PortafolioWeb/index.html
@@ -15,6 +15,10 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
         <!--CSS-->
         <link href="style.css" rel="stylesheet">
+        <!--Google Fonts-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Croissant+One&display=swap" rel="stylesheet">
     </head>
     <body>
         <!--Barra de navegacion-->
@@ -25,7 +29,7 @@
               </button>
               <div class="collapse navbar-collapse" id="navbar-toggler">
                 <a class="navbar-brand" href="#">
-                    <img src="images/icono.png" width="50" alt="Logo de la pagina web">
+                    <img src="images/icono.png" width="70" alt="Logo de la pagina web">
                 </a>
                 <ul class="navbar-nav d-flex justify-content-center align-items-center">
                   <li class="nav-item">
@@ -43,7 +47,20 @@
                 </ul>
               </div>
             </div>
-          </nav>
+        </nav>
+
+        <!--Seccion Herso-->
+        <section class="hero align-items-strech">
+            <div class="hero-principal d-flex flex-column justify-content-center align-items-center">
+                <img class="hero-imagen-desarrollador rounded-circle" src="images/foto-perfil.svg"  alt="Foto de AlceaXich">
+                <h1>Hola, soy AlceaXich</h1>
+                <h2>Desarrollo sitios web,</h2>
+            </div>
+            <div class="hero-inferior">
+              <img class="hero-inferior-imagen img-fluid" src="images/hero-inferior.svg" alt="Monitor, laptop, logos de HTML, JS, CSS y React"> 
+            </div>
+        </section>
+
         <!--Sugerencia de bootstrap, El script debe ir aqui-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 
