seccion About Me

--- a/PortafolioWeb/index.html
+++ b/PortafolioWeb/index.html
@@ -49,7 +49,7 @@
             </div>
         </nav>
 
-        <!--Seccion Herso-->
+        <!--Seccion Hero-->
         <section class="hero align-items-strech">
             <div class="hero-principal d-flex flex-column justify-content-center align-items-center">
                 <img class="hero-imagen-desarrollador rounded-circle" src="images/foto-perfil.svg"  alt="Foto de AlceaXich">
@@ -61,6 +61,13 @@
             </div>
         </section>
 
+        <!--Sobre mi-->
+        <section class="sobre-mi seccion-oscura">
+          <div class="contenedor">
+            <h2 class="seccion-titulo">Conoce más de AlceaXich</h2>
+            <p class="seccion-texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis, sapien blandit volutpat facilisis, orci turpis vulputate mi, vel fringilla tellus massa sed metus. Pellentesque vitae leo eros. Vivamus congue accumsan consectetur. Donec scelerisque libero lacus, a finibus magna faucibus ut. Suspendisse consequat risus in nunc feugiat volutpat. Duis in ligula pulvinar, malesuada ex vitae, accumsan dui. Cras congue eget arcu quis sollicitudin. Mauris at ultrices elit. Donec commodo dolor mi, malesuada porta risus eleifend ac. Pellentesque id leo mi.</p>
+          </div>
+        </section>
         <!--Sugerencia de bootstrap, El script debe ir aqui-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 
