--- a/PortafolioWeb/index.html
+++ b/PortafolioWeb/index.html
@@ -52,9 +52,9 @@
         <!--Seccion Hero-->
         <section class="hero align-items-strech">
             <div class="hero-principal d-flex flex-column justify-content-center align-items-center">
-                <img class="hero-imagen-desarrollador rounded-circle" src="images/foto-perfil.svg"  alt="Foto de AlceaXich">
+                <img class="hero-imagen-desarrollador rounded-circle" src="images/perfil2.jpeg"  alt="Foto de AlceaXich">
                 <h1>Hola, soy AlceaXich</h1>
-                <h2>Desarrollo sitios web,</h2>
+                <h2>Desarrollo sitios web, aprendo nuevas tecnologias como JS, React.</h2>
             </div>
             <div class="hero-inferior">
               <img class="hero-inferior-imagen img-fluid" src="images/hero-inferior.svg" alt="Monitor, laptop, logos de HTML, JS, CSS y React"> 
