--- a/PortafolioWeb/index.html
+++ b/PortafolioWeb/index.html
@@ -68,6 +68,23 @@
             <p class="seccion-texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis, sapien blandit volutpat facilisis, orci turpis vulputate mi, vel fringilla tellus massa sed metus. Pellentesque vitae leo eros. Vivamus congue accumsan consectetur. Donec scelerisque libero lacus, a finibus magna faucibus ut. Suspendisse consequat risus in nunc feugiat volutpat. Duis in ligula pulvinar, malesuada ex vitae, accumsan dui. Cras congue eget arcu quis sollicitudin. Mauris at ultrices elit. Donec commodo dolor mi, malesuada porta risus eleifend ac. Pellentesque id leo mi.</p>
           </div>
         </section>
+
+        <!--Experiencia-->
+        <section class="experiencia seccion-clara">
+          <div class="container text-center">
+            <div class="row">
+              <div class="col-12 col-md-4">
+                <p class="experiencia-titulo">Desarrollo Web</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum accusantium molestiae reprehenderit. Odit officiis quaerat accusamus necessitatibus, tenetur hic ipsa.
+                </p>
+              </div>
+              <div class="col-12 col-md-4">
+                
+              </div>
+              <div class="col-12 col-md-4"></div>
+            </div>
+          </div>
+        </section>
         <!--Sugerencia de bootstrap, El script debe ir aqui-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 
