--- a/PortafolioWeb/index.html
+++ b/PortafolioWeb/index.html
@@ -13,6 +13,8 @@
         <link rel="icon" type="image/x-icon" href="images/icono.png">
         <!--Bootstrap-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+        <!--Iconos de boostrap-->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
         <!--CSS-->
         <link href="style.css" rel="stylesheet">
         <!--Google Fonts-->
@@ -73,15 +75,42 @@
         <section class="experiencia seccion-clara">
           <div class="container text-center">
             <div class="row">
-              <div class="col-12 col-md-4">
+              <div class="columna col-12 col-md-4">
+                <i class="bi bi-laptop"></i>
                 <p class="experiencia-titulo">Desarrollo Web</p>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum accusantium molestiae reprehenderit. Odit officiis quaerat accusamus necessitatibus, tenetur hic ipsa.
                 </p>
+                <div class="badges-contenedor">
+                  <span class="badge text-bg-primary">HTML</span>
+                  <span class="badge text-bg-primary">CSS</span>
+                  <span class="badge text-bg-primary">JavaScript</span>
+                  <span class="badge text-bg-primary">React</span>
+                </div>
               </div>
-              <div class="col-12 col-md-4">
-                
+              <div class="columna col-12 col-md-4">
+                <i class="bi bi-laptop"></i>
+                <p class="experiencia-titulo">Lenguajes de programación</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum accusantium molestiae reprehenderit. Odit officiis quaerat accusamus necessitatibus, tenetur hic ipsa.
+                </p>
+                <div class="badges-contenedor">
+                  <span class="badge text-bg-primary">Python</span>
+                  <span class="badge text-bg-primary">C++</span>
+                  <span class="badge text-bg-primary">JavaScript</span>
+                  <span class="badge text-bg-primary">R</span>
+                </div>
               </div>
-              <div class="col-12 col-md-4"></div>
+              <div class="columna col-12 col-md-4">
+                <i class="bi bi-laptop"></i>
+                <p class="experiencia-titulo">Frameworks</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum accusantium molestiae reprehenderit. Odit officiis quaerat accusamus necessitatibus, tenetur hic ipsa.
+                </p>
+                <div class="badges-contenedor">
+                  <span class="badge text-bg-primary">Flask</span>
+                  <span class="badge text-bg-primary">Django</span>
+                  <span class="badge text-bg-primary">Laravel</span>
+                  <span class="badge text-bg-primary">Next.js</span>
+                </div>
+              </div>
             </div>
           </div>
         </section>
