Seccion articulos terminado

--- a/PortafolioWeb/index.html
+++ b/PortafolioWeb/index.html
@@ -239,6 +239,42 @@
           </a>
           
         </section>
+      <!--Articulos-->
+        <section class="articulos justify-content-start">
+          <h2 class="seccion-titulo texto-negro">Articulos</h2>
+          <div class="card">
+            <div class="card-header">
+              Más recientes
+            </div>
+            <ul class="list-group list-group-flush">
+              <a href="" target="_blank" rel="noopener noreferrer">
+                <li class="list-group-item">Machine Learning un  paso ...</li>
+              </a>
+              <a href="" target="_blank" rel="noopener noreferrer">
+                <li class="list-group-item">Machine Learning un  paso ...</li>
+              </a>
+              <a href="" target="_blank" rel="noopener noreferrer">
+                <li class="list-group-item">Machine Learning un  paso ...</li>
+              </a>
+              <a href="" target="_blank" rel="noopener noreferrer">
+                <li class="list-group-item">Machine Learning un  paso ...</li>
+              </a>
+              <a href="" target="_blank" rel="noopener noreferrer">
+                <li class="list-group-item">Machine Learning un  paso ...</li>
+              </a>
+              <a href="" target="_blank" rel="noopener noreferrer">
+                <li class="list-group-item">Machine Learning un  paso ...</li>
+              </a>
+      
+            </ul>
+          </div>
+          <a href="https://github.com/AlceaXich" target="_blank" rel="noopener noreferrer">
+            <button type="button" class="btn btn-info">
+            Ver más articulos
+            <i class="bi bi-arrow-right-circle-fill"></i>
+          </button>
+          </a>
+        </section>
 
         <!--Sugerencia de bootstrap, El script debe ir aqui-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
