--- a/PortafolioWeb/index.html
+++ b/PortafolioWeb/index.html
@@ -314,6 +314,29 @@
             </button>
           </div>
         </section>
+        <!--Contacto-->
+        <section class="contacto seccion-oscura">
+          <div class="container">
+            <div class="container text-center rectangulo d-flex justify-content-evenly">
+              <div class="row">
+                <div class="col-12 col-md-4 seccion-titulo">
+                  Hablemos!
+                </div>
+                <div class="col-12 col-md-4 descripcion">
+                  Contáctame para nuevos proyectos.
+                </div>
+                <div class="col-12 col-md-4">
+                  <a href="mailto:shirmoc.t05@gmail.com">
+                    <button type="button">
+                        Contacto
+                        <i class="bi bi-envelope-at-fill"></i>
+                    </button>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
 
         <!--Sugerencia de bootstrap, El script debe ir aqui-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
