Seccion footer terminado

--- a/PortafolioWeb/index.html
+++ b/PortafolioWeb/index.html
@@ -337,6 +337,28 @@
             </div>
           </div>
         </section>
+        <!--Footeer-->
+        <footer class="seccion-oscura d-flex flex-column align-items-center justify-content-center">
+          <img class="footer-logo" src="./images/icono.png" alt="">
+          <p class="footer-texto text-center"> Aprendo y creo todos los dias.</p>
+          <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
+            <a href="https://github.com/AlceaXich/" target="_blank" rel="noopener noreferrer">
+              <i class="bi bi-github"></i>
+            </a>
+            <a href="https://github.com/AlceaXich/" target="_blank" rel="noopener noreferrer">
+              <i class="bi bi-discord"></i>
+            </a>
+            <a href="https://github.com/AlceaXich/" target="_blank" rel="noopener noreferrer">
+              <i class="bi bi-linkedin"></i>
+            </a>
+            <a href="https://github.com/AlceaXich/" target="_blank" rel="noopener noreferrer">
+              <i class="bi bi-threads"></i>
+            </a>
+            <a href="https://github.com/AlceaXich/" target="_blank" rel="noopener noreferrer">
+              <i class="bi bi-instagram"></i>
+            </a>
+          </div>
+        </footer>
 
         <!--Sugerencia de bootstrap, El script debe ir aqui-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
