--- a/PortafolioWeb/index.html
+++ b/PortafolioWeb/index.html
@@ -35,16 +35,16 @@
                 </a>
                 <ul class="navbar-nav d-flex justify-content-center align-items-center">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Sobre mí</a>
+                    <a class="nav-link active" aria-current="page" href="#sobre-mi">Sobre mí</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Proyectos</a>
+                    <a class="nav-link" href="#proyectos">Proyectos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Testimonios</a>
+                    <a class="nav-link" href="#testimonios">Testimonios</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Contacto</a>
+                    <a class="nav-link" href="#contacto">Contacto</a>
                   </li>
                 </ul>
               </div>
@@ -64,7 +64,7 @@
         </section>
 
         <!--Sobre mi-->
-        <section class="sobre-mi seccion-oscura">
+        <section id="sobre-mi" class="sobre-mi seccion-oscura">
           <div class="contenedor">
             <h2 class="seccion-titulo">Conoce más de AlceaXich</h2>
             <p class="seccion-texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis, sapien blandit volutpat facilisis, orci turpis vulputate mi, vel fringilla tellus massa sed metus. Pellentesque vitae leo eros. Vivamus congue accumsan consectetur. Donec scelerisque libero lacus, a finibus magna faucibus ut. Suspendisse consequat risus in nunc feugiat volutpat. Duis in ligula pulvinar, malesuada ex vitae, accumsan dui. Cras congue eget arcu quis sollicitudin. Mauris at ultrices elit. Donec commodo dolor mi, malesuada porta risus eleifend ac. Pellentesque id leo mi.</p>
@@ -116,7 +116,7 @@
         </section>
 
         <!--Proyectos-->
-        <section class="proyectos-recientes seccion-clara d-flex">
+        <section id="proyectos" class="proyectos-recientes seccion-clara d-flex">
           <h2 class="seccion-titulo texto-negro">Mis proyectos</h2>
           <h3 class="seccion-descripcion">Estos son algunos proyectos en los que eh estado trabajando recientemente.</h3>
           <!--Galeria proyectos-->
@@ -276,7 +276,7 @@
           </a>
         </section>
       <!--Testimonios-->
-        <section class="testimonios seccion-clara">
+        <section id="testimonios" class="testimonios seccion-clara">
           <h2 class="seccion-titulo">Testimonios</h2>
           <h3 class="seccion-descripcion">Estos son algunos testimonios</h3>
           
@@ -315,7 +315,7 @@
           </div>
         </section>
         <!--Contacto-->
-        <section class="contacto seccion-oscura">
+        <section id="contacto" class="contacto seccion-oscura">
           <div class="container">
             <div class="container text-center rectangulo d-flex justify-content-evenly">
               <div class="row">
@@ -358,7 +358,11 @@
               <i class="bi bi-instagram"></i>
             </a>
           </div>
+          <div class="derechos-autor">
+            Creado por AlceaXich (2023) &#169;
+          </div>
         </footer>
+        
 
         <!--Sugerencia de bootstrap, El script debe ir aqui-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
